test_regress/t/t_assoc_wildcard_unsup.out
%Error-UNSUPPORTED: t/t_assoc_wildcard_unsup.v:25:19: Unsupported: [*] wildcard associative arrays
   25 |          string a [*];
      |                   ^~
%Error: Exiting due to
